sgl_img_proc/_build/html/reports/first_spectral_analyses.err.log
Traceback (most recent call last):
  File "/Users/gwen29360/opt/anaconda3/envs/utoulouse/lib/python3.13/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
    ~~~~~~~~~^
        nb,
        ^^^
    ...<4 lines>...
        **kwargs,
        ^^^^^^^^^
    )
    ^
  File "/Users/gwen29360/opt/anaconda3/envs/utoulouse/lib/python3.13/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "/Users/gwen29360/opt/anaconda3/envs/utoulouse/lib/python3.13/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/gwen29360/opt/anaconda3/envs/utoulouse/lib/python3.13/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
           ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "/Users/gwen29360/opt/anaconda3/envs/utoulouse/lib/python3.13/asyncio/base_events.py", line 725, in run_until_complete
    return future.result()
           ~~~~~~~~~~~~~^^
  File "/Users/gwen29360/opt/anaconda3/envs/utoulouse/lib/python3.13/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
        cell, index, execution_count=self.code_cells_executed + 1
    )
  File "/Users/gwen29360/opt/anaconda3/envs/utoulouse/lib/python3.13/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/gwen29360/opt/anaconda3/envs/utoulouse/lib/python3.13/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
dt = .5 # the time sampling
amplitude = 1 # wave amplitude
T = 16.6 # The period of the wave
duration_exp1 = 180 # the duration for the first experiement
duration_exp2 = 1000 # the duration for the second experiement
time_exp1 = np.arange(0, duration_exp1, dt) # time axis exp 1
time_exp2 = np.arange(0, duration_exp2, dt) # time axis exp 2

omega = 2*np.pi*(1/T)
phase_0 = 0
monochromatic_wave = #######
------------------

  [36mCell[39m[36m [39m[32mIn[2][39m[32m, line 11[39m
[31m    [39m[31mmonochromatic_wave = #######[39m
                         ^
[31mSyntaxError[39m[31m:[39m invalid syntax

SyntaxError: invalid syntax (211976146.py, line 11)

